Fix Job naming conflicts and correct stack labels
- Made restart job names unique per stack (foundation vs sample)
- Fixed labels to match correct stack (postgres-foundation vs sample-app)
- Resolves Job immutable field conflicts during deployment

--- a/software/stacks/foundation/postgres/app/pgadmin-restart-job.yaml
+++ b/software/stacks/foundation/postgres/app/pgadmin-restart-job.yaml
@@ -2,10 +2,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: pgadmin-config-restart
+  name: pgadmin-config-restart-foundation
   namespace: postgres
   labels:
-    hostk8s.app: sample-app
+    hostk8s.app: postgres-foundation
     hostk8s.component: postgres
     app.kubernetes.io/name: pgadmin-restart
 spec:
