--- a/software/stacks/foundation/postgres/app/pgadmin-restart-rbac.yaml
+++ b/software/stacks/foundation/postgres/app/pgadmin-restart-rbac.yaml
@@ -5,7 +5,7 @@ metadata:
   name: pgadmin-restart
   namespace: postgres
   labels:
-    hostk8s.app: sample-app
+    hostk8s.app: postgres-foundation
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -14,7 +14,7 @@ metadata:
   name: pgadmin-restart
   namespace: postgres
   labels:
-    hostk8s.app: sample-app
+    hostk8s.app: postgres-foundation
 rules:
 - apiGroups: ["apps"]
   resources: ["deployments"]
@@ -30,7 +30,7 @@ metadata:
   name: pgadmin-restart
   namespace: postgres
   labels:
-    hostk8s.app: sample-app
+    hostk8s.app: postgres-foundation
 subjects:
 - kind: ServiceAccount
   name: pgadmin-restart
