Separate database from app in sample-app stack
- Split sample-app into two kustomizations: sample-app-db and sample-app
- Database deploys first with voting-db cluster and pgAdmin configuration
- App deploys second with vote/result/worker applications
- Ensures proper sequencing: components → database → application
- App depends on sample-app-db for proper ordering

--- a/software/stacks/sample-app/stack.yaml
+++ b/software/stacks/sample-app/stack.yaml
@@ -54,6 +54,32 @@ spec:
       namespace: postgres
 
 ---
+# Database: Voting database and pgAdmin configuration
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: sample-app-db
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: component-redis
+    - name: component-postgres
+  interval: 10m
+  retryInterval: 1m
+  timeout: 10m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system-sample-app
+  path: ./software/stacks/sample-app/db
+  prune: true
+  wait: true
+  healthChecks:
+    - kind: Cluster
+      name: voting-db
+      namespace: postgres
+      apiVersion: postgresql.cnpg.io/v1
+
+---
 # Application: Voting app
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
@@ -62,8 +88,7 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-    - name: component-redis
-    - name: component-postgres
+    - name: sample-app-db
   interval: 10m
   retryInterval: 1m
   timeout: 5m
