--- a/software/stacks/sample-app/app/vote.yaml
+++ b/software/stacks/sample-app/app/vote.yaml
@@ -1,3 +1,21 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: vote
+  namespace: sample-app
+  labels:
+    app: vote
+    hostk8s.component: vote-service
+spec:
+  selector:
+    app: vote
+  ports:
+  - port: 80
+    targetPort: 80
+    protocol: TCP
+    name: http
+  type: ClusterIP
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
