--- a/software/stacks/sample-app/db/kustomization.yaml
+++ b/software/stacks/sample-app/db/kustomization.yaml
@@ -8,8 +8,7 @@ metadata:
 
 resources:
   - database.yaml
-  - pgadmin-restart-rbac.yaml
-  - pgadmin-restart-job.yaml
+  - restart.yaml
 
 # Generate ConfigMap with voting database configuration (no hash for stable reference)
 configMapGenerator:
