fix: add component dependency secrets to airflow stack contract

--- a/software/stacks/foundation/airflow/hostk8s.secrets.yaml
+++ b/software/stacks/foundation/airflow/hostk8s.secrets.yaml
@@ -4,6 +4,7 @@ metadata:
   name: foundation/airflow
 spec:
   secrets:
+    # Airflow application secrets
     - name: airflow-secrets
       namespace: airflow
       data:
@@ -15,6 +16,7 @@ spec:
         - key: admin-password
           generate: password
           length: 16
+    # Airflow database credentials
     - name: airflow-db-credentials
       namespace: airflow
       data:
@@ -27,3 +29,21 @@ spec:
           value: postgres-cluster-rw.postgres.svc.cluster.local
         - key: database
           value: airflow
+    # pgAdmin4 web UI credentials (postgres component dependency)
+    - name: pgadmin4-credentials
+      namespace: postgres
+      data:
+        - key: email
+          value: admin@hostk8s.com
+        - key: password
+          generate: password
+          length: 12
+    # Redis Commander web UI credentials (redis component dependency)
+    - name: redis-commander-credentials
+      namespace: redis
+      data:
+        - key: username
+          value: admin
+        - key: password
+          generate: password
+          length: 12
