fix: correct ExternalSecret label to use valid format
- Replace 'foundation/airflow' with 'foundation-airflow' in labels
- Kubernetes labels cannot contain slashes

--- a/software/components/airflow/app/external-secret.yaml
+++ b/software/components/airflow/app/external-secret.yaml
@@ -9,7 +9,7 @@ metadata:
   namespace: airflow
   labels:
     hostk8s.io/managed: "true"
-    hostk8s.io/contract: "foundation/airflow"
+    hostk8s.io/contract: "foundation-airflow"
 spec:
   refreshInterval: 10s
   secretStoreRef:
@@ -39,7 +39,7 @@ metadata:
   namespace: airflow
   labels:
     hostk8s.io/managed: "true"
-    hostk8s.io/contract: "foundation/airflow"
+    hostk8s.io/contract: "foundation-airflow"
 spec:
   refreshInterval: 10s
   secretStoreRef:
