--- a/software/components/airflow/app/release.yaml
+++ b/software/components/airflow/app/release.yaml
@@ -136,8 +136,7 @@ spec:
     # Logs configuration
     logs:
       persistence:
-        enabled: true
-        size: 5Gi
+        enabled: false
 
     # Config for Airflow
     config:
