fix: correct storage access modes and classes for local development
- Change DAGs storage from ReadWriteMany to ReadWriteOnce
- Use standard storage class instead of custom classes
- Remove logs storage since persistence is disabled
- Fix HelmRelease DAGs access mode configuration

--- a/software/components/airflow/app/release.yaml
+++ b/software/components/airflow/app/release.yaml
@@ -130,7 +130,7 @@ spec:
       persistence:
         enabled: true
         existingClaim: "airflow-dags-pvc"
-        accessMode: ReadWriteMany
+        accessMode: ReadWriteOnce
         size: 1Gi
 
     # Logs configuration
