fix: move airflow-dags-pvc to component to resolve circular dependency
- Move PVC from foundation/airflow/dags to components/airflow/database
- This ensures PVC is created before HelmRelease tries to use it
- Removes circular dependency between component and foundation layers
- Foundation DAGs now only handles ConfigMap, not infrastructure

--- a/software/components/airflow/database/storage.yaml
+++ b/software/components/airflow/database/storage.yaml
@@ -5,7 +5,7 @@ metadata:
   name: airflow-dags-pvc
   namespace: airflow
   labels:
-    hostk8s.stack: airflow
+    hostk8s.component: airflow
     hostk8s.type: dags-storage
 spec:
   accessModes:
