--- a/software/components/postgres/kustomization.yaml
+++ b/software/components/postgres/kustomization.yaml
@@ -6,9 +6,8 @@ resources:
   - source.yaml
   - release.yaml
   - external-secret.yaml
-  - pgadmin-deployment.yaml
-  - pgadmin-service.yaml
-  - pgadmin-ingress.yaml
+  - pgadmin.yaml
+  - ingress.yaml
 
 # ConfigMap is provided by each stack for stack-specific database configuration
 # pgAdmin deployment uses optional mount - will start without ConfigMap initially
