--- a/software/components/postgres/pgadmin.yaml
+++ b/software/components/postgres/pgadmin.yaml
@@ -1,3 +1,23 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: pgadmin4
+  namespace: postgres
+  labels:
+    hostk8s.component: postgres
+    app: pgadmin4
+    component: management-ui
+spec:
+  selector:
+    app: pgadmin4
+    component: management-ui
+  ports:
+  - port: 80
+    targetPort: 5050
+    protocol: TCP
+    name: http
+  type: ClusterIP
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
