--- a/software/components/airflow/app/storage.yaml
+++ b/software/components/airflow/app/storage.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: standard
+  storageClassName: airflow-storage
   resources:
     requests:
       storage: 1Gi
