--- a/software/components/airflow/component.yaml
+++ b/software/components/airflow/component.yaml
@@ -28,7 +28,6 @@ spec:
     - kind: Deployment
       name: pgadmin4
       namespace: postgres
-
 ---
 # Infrastructure: Redis component
 apiVersion: kustomize.toolkit.fluxcd.io/v1
@@ -53,34 +52,32 @@ spec:
     - kind: Deployment
       name: redis-commander
       namespace: redis
-
-
 ---
-# # Database: Create Airflow database in PostgreSQL cluster
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: component-airflow-database
-#   namespace: flux-system
-#   labels:
-#     hostk8s.component: airflow
-# spec:
-#   dependsOn:
-#     - name: component-postgres
-#   interval: 10m
-#   retryInterval: 1m
-#   timeout: 10m
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
-#   path: ./software/components/airflow/database
-#   prune: true
-#   wait: true
-#   healthChecks:
-#     - kind: Cluster
-#       name: postgres-cluster
-#       namespace: postgres
-#       apiVersion: postgresql.cnpg.io/v1
+# Database: Create Airflow database in PostgreSQL cluster
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: component-airflow-database
+  namespace: flux-system
+  labels:
+    hostk8s.component: airflow
+spec:
+  dependsOn:
+    - name: component-postgres
+  interval: 10m
+  retryInterval: 1m
+  timeout: 10m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./software/components/airflow/database
+  prune: true
+  wait: true
+  healthChecks:
+    - kind: Cluster
+      name: postgres-cluster
+      namespace: postgres
+      apiVersion: postgresql.cnpg.io/v1
 
 # ---
 # # Application: Deploy Airflow
