--- a/software/components/airflow/app/kustomization.yaml
+++ b/software/components/airflow/app/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
   - namespace.yaml
   - storage.yaml
   - source.yaml
-  - release.yaml
   - external-secret.yaml
-  - ingress.yaml
+  # - release.yaml
+  # - ingress.yaml
