--- a/software/components/airflow/component.yaml
+++ b/software/components/airflow/component.yaml
@@ -78,28 +78,27 @@ spec:
       name: postgres-cluster
       namespace: postgres
       apiVersion: postgresql.cnpg.io/v1
-
-# ---
-# # Application: Deploy Airflow
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: component-airflow-app
-#   namespace: flux-system
-#   labels:
-#     hostk8s.component: airflow
-# spec:
-#   dependsOn:
-#     - name: component-airflow-database
-#   interval: 10m
-#   retryInterval: 1m
-#   timeout: 10m
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
-#   path: ./software/components/airflow/app
-#   prune: true
-#   wait: true
+---
+# Application: Deploy Airflow
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: component-airflow-app
+  namespace: flux-system
+  labels:
+    hostk8s.component: airflow
+spec:
+  dependsOn:
+    - name: component-airflow-database
+  interval: 10m
+  retryInterval: 1m
+  timeout: 10m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./software/components/airflow/app
+  prune: true
+  wait: true
 #   healthChecks:
 #     - kind: Deployment
 #       name: airflow-webserver
