--- a/software/components/airflow/app/source.yaml
+++ b/software/components/airflow/app/source.yaml
@@ -1,9 +1,17 @@
----
-apiVersion: source.toolkit.fluxcd.io/v1beta2
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: apache-airflow
+  name: airflow-official
   namespace: flux-system
 spec:
-  interval: 60m
+  interval: 5m
   url: https://airflow.apache.org
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: airflow-community
+  namespace: flux-system
+spec:
+  interval: 5m
+  url: https://airflow-helm.github.io/charts
