fix: airflow deployment sequencing and configuration
- Fixed HelmRepository name (apache-airflow -> airflow-official)
- Removed ConfigMap dependency from admin user creation job
- Added init container to wait for Airflow webserver
- Moved admin job to separate post-install kustomization
- Job now runs AFTER Airflow is fully deployed
- Disabled defaultUser in Helm to avoid hardcoded passwords

--- a/software/components/airflow/app/kustomization.yaml
+++ b/software/components/airflow/app/kustomization.yaml
@@ -8,4 +8,4 @@ resources:
   - external-secret.yaml
   - release.yaml
   - ingress.yaml
-  - create-admin-job.yaml
+  # Note: create-admin-job.yaml should be deployed separately after Airflow is ready
