--- a/software/components/airflow/app/create-admin-job.yaml
+++ b/software/components/airflow/app/create-admin-job.yaml
@@ -1,6 +1,7 @@
 ---
 # Job to create Airflow admin user from secret
 # This replaces the Helm chart's defaultUser to avoid hardcoding passwords
+# Note: This job should run AFTER Airflow is deployed and ready
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -9,11 +10,8 @@ metadata:
   labels:
     hostk8s.component: airflow
     hostk8s.type: setup-job
-  annotations:
-    helm.sh/hook: post-install,post-upgrade
-    helm.sh/hook-weight: "1"
-    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
 spec:
+  backoffLimit: 6
   template:
     metadata:
       labels:
@@ -21,6 +19,20 @@ spec:
         hostk8s.type: setup-job
     spec:
       restartPolicy: OnFailure
+      initContainers:
+      # Wait for Airflow webserver to be ready
+      - name: wait-for-airflow
+        image: busybox:1.36
+        command:
+        - sh
+        - -c
+        - |
+          echo "Waiting for Airflow webserver to be ready..."
+          until nc -z airflow-webserver.airflow.svc.cluster.local 8080; do
+            echo "Airflow webserver not ready yet, waiting..."
+            sleep 10
+          done
+          echo "Airflow webserver is ready!"
       containers:
       - name: create-admin
         image: apache/airflow:2.10.1-python3.11
@@ -77,11 +89,3 @@ spec:
           value: "False"
         - name: AIRFLOW__CORE__LOAD_EXAMPLES
           value: "False"
-        volumeMounts:
-        - name: config
-          mountPath: /opt/airflow/airflow.cfg
-          subPath: airflow.cfg
-      volumes:
-      - name: config
-        configMap:
-          name: airflow-config
