--- a/software/components/airflow/post-install/kustomization.yaml
+++ b/software/components/airflow/post-install/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../app/create-admin-job.yaml
+  - create-admin-job.yaml
