--- a/software/components/airflow/app/external-secret.yaml
+++ b/software/components/airflow/app/external-secret.yaml
@@ -65,3 +65,27 @@ spec:
     remoteRef:
       key: airflow/airflow-db-credentials
       property: database
+---
+# Create airflow-metadata secret with connection string for Helm chart
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: airflow-metadata
+  namespace: airflow
+  labels:
+    hostk8s.io/managed: "true"
+spec:
+  refreshInterval: 10s
+  secretStoreRef:
+    name: vault-backend
+    kind: ClusterSecretStore
+  target:
+    name: airflow-metadata
+    creationPolicy: Owner
+    template:
+      engineVersion: v2
+      data:
+        connection: "postgresql+psycopg2://{{ .username }}:{{ .password }}@{{ .host }}:5432/{{ .database }}"
+  dataFrom:
+    - extract:
+        key: airflow/airflow-db-credentials
