--- a/software/stacks/foundation/airflow/hostk8s.secrets.yaml
+++ b/software/stacks/foundation/airflow/hostk8s.secrets.yaml
@@ -27,6 +27,8 @@ spec:
           length: 16
         - key: host
           value: postgres-cluster-rw.postgres.svc.cluster.local
+        - key: port
+          value: "5432"
         - key: database
           value: airflow
     # pgAdmin4 web UI credentials (postgres component dependency)
